@@ -5,9 +5,9 @@ idatadir = $(BANKDATA_PATH)
 dist_idata_DATA = bankdata.txt ibandata.txt
 
 dist_pkgdata_SCRIPTS = \
-  bundesbank.sed \
+  bundesbank.pl \
   online_update.pl
 
-EXTRA_DIST = online_update.pl.in bundesbank.sed.in
+EXTRA_DIST = online_update.pl.in bundesbank.pl.in
 
-CLEANFILES = online_update.pl bundesbank.sed
+CLEANFILES = online_update.pl bundesbank.pl
