@@ -10,7 +10,7 @@
 ## Configuration
 # Commands
 $LYNX = "@LYNX@";
-$SED = "@SED@";
+#$SED = "@SED@";
 $GREP = "@GREP@";
 $RECODE = "@RECODE@";
 # Directories
@@ -22,8 +22,8 @@ $pkgdatadir="$datadir/@PACKAGE@";
 ## Sanity checks
 die "lynx is not available on your system, or was not available on the system where the installed rpm was built. This tool requires lynx. If you have it installed, then edit the script and set the variable LYNX to the full path to lynx. Aborting for now."
   if $LYNX eq "NO";
-die "sed or grep is not available on your system. This tool requires it. Aborting."
-  if $SED eq "NO" || $GREP eq "NO";
+#die "sed or grep is not available on your system. This tool requires it. Aborting."
+#  if $SED eq "NO" || $GREP eq "NO";
 die "The directory for the bankdata \"$BANKDATADIR\" does not exist. Aborting."
   if ! -d $BANKDATADIR;
 die "The directory for the bankdata \"$BANKDATADIR\" is not writable. You need to run this script as the user who owns that directory. This probably means you must run this script as root! However this script will not write anything anywhere until it tells you so and you confirm it."
@@ -105,7 +105,7 @@ if (scalar @diff == 0) {
 $download = "$MAIN_URL/$correct_url";
 $install_1 = "$BANKDATADIR/$file";
 $install_2 = "$BANKDATADIR/$INSTALLED_NAME";
-$conv_script = "$pkgdatadir/bundesbank.sed";
+$conv_script = "$pkgdatadir/bundesbank.pl";
 print "Summary: Will download \n".
   "  $download \n".
   "to \n".
@@ -149,8 +149,8 @@ if ($RECODE ne "NO") {
 };
 
 ## 5. Convert new file into the place of the old one.
-print "$ECHO $SED -nf $conv_script $lt $install_1 $gt $install_2\n";
-system("$ECHO $SED -nf $conv_script $lt $install_1 $gt $install_2");# || die "can't call system: $!";
+print "$ECHO $conv_script $lt $install_1 $gt $install_2\n";
+system("$ECHO $conv_script $lt $install_1 $gt $install_2");# || die "can't call system: $!";
 
 ## 6. Recode the locally encoded file into this library's
 ## encoding (latin1 for now)
